2011-01-27  Rik  <octave@nomad.inbox5.com>

	* graphics.cc: Improve reset docstring.

2011-01-27  Kai Habel  <kai.habel@gmx.de>

	* DLD-FUNCTIONS/__init_fltk__.cc (__fltk_uigetfile__): Remove here.
	* DLD-FUNCTIONS/__fltk_uigetfile__.cc: New file. 
	* DLD-FUNCTIONS/module-files: Add __fltk_uigetfile__.cc.
	Bug #32190.

2011-01-27  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/dlmread.cc (Fdlmread): Skip leading whitespace
	on each line.

2011-01-27  John W. Eaton  <jwe@octave.org>

	* ov-struct.cc (octave_struct::subsasgn,
	octave_scalar_struct::subsasgn): Call undef_subsasgn on object
	returned by octave_value::empty_conv if LHS is initially undefined.
	Bug #32242.

2011-01-27  John W. Eaton  <jwe@octave.org>

	* input.cc (input_event_hook): Fix incorrect use of iterator.
	Reported by Pascal Dupuis <Pascal.Dupuis@worldonline.be>.

2011-01-27  John W. Eaton  <jwe@octave.org>

	* ov-class.cc (octave_class::reconstruct_exemplar):
	Call constructor with do_multi_index_op instead of feval.
	Verify that symbol_table::find_method did return a class
	constructor for the correct type.  Bug #32242.

2011-01-26  John W. Eaton  <jwe@octave.org>

	* lex.ll, graphics.cc, gl-render.cc, ov-mex-fcn.h, graphics.h.in:
	Delete trailing whitespace.

2011-01-26  John W. Eaton  <jwe@octave.org>

	Bug #32242.

	* ov.h, ov.cc (octave_value::undef_subsasgn): New function.
	* ov-class.h, ov-class.cc (octave_class::undef_subsasgn,
	octave_class::subsasgn_common): New functions.
	* ov-base.h, ov-base.cc (octave_base_value::subsasgn): If
	undefined, call undef_subsasgn on object returned by
	octave_value::empty_conv.
	(octave_base_value::undef_subsasgn): New virtual function.
	(octave_base_value::subsasgn): Only handle case of undefined
	values here.

2011-01-26  Pascal Dupuis  <Pascal.Dupuis@worldonline.be>
	    John W. Eaton  <jwe@octave.org>

	* graphics.h.in (scaler::scaler (const std::string&)): New constructor.
	(graphics_handle::operator++, graphics_hanlde::operator--):